--- a/src/components/Timer/Timer.module.css
+++ b/src/components/Timer/Timer.module.css
@@ -1,3 +1,4 @@
+/* default timer style */
 .timerWrapper {
   display: flex;
   align-items: center;
@@ -27,4 +28,33 @@
   font-size: 32px;
   font-weight: bold;
   color: #e07575;
+}
+
+/* other timer style [Banner timer style] */
+.bannerBox {
+  background: #fff;
+  border-radius: 50%;
+  width: 67px;
+  height: 67px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.18);
+}
+
+.bannerNumber {
+  font-size: 20px;
+  font-weight: bold;
+  color: #000;
+  order: 1;
+}
+
+.bannerLabel {
+  font-size: 10px;
+  color: #000;
+  order: 2;
+}
+.bannerSeparator {
+  display: none;
 }
