--- a/src/sections/styles.module.css
+++ b/src/sections/styles.module.css
@@ -5,7 +5,7 @@
   gap: 20px;
   align-items: stretch;
 }
-.section {
+.section, .banner {
   padding: 70px 40px 0 40px;
 }
 .flex {
@@ -24,6 +24,10 @@
 }
 .categories {
   grid-template-columns: repeat(6, minmax(170px, 1fr));
+}
+
+.banner {
+  margin-bottom: 70px;
 }
 
 @media (max-width: 992px) {
