--- a/src/sections/styles.module.css
+++ b/src/sections/styles.module.css
@@ -30,9 +30,37 @@
   margin-bottom: 70px;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  gap: 16px;
+  align-items: start;
+  padding: 40px 0;
+}
+
+.cardWrapper {
+  width: 100%;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.rightTop {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+
 @media (max-width: 992px) {
   .hero {
     grid-template-columns: 220px 1fr;
+  }
+    .grid {
+    grid-template-columns: 1fr;
   }
 }
 @media (max-width: 768px) {
