--- a/src/sections/styles.module.css
+++ b/src/sections/styles.module.css
@@ -54,17 +54,21 @@
   gap: 20px;
 }
 
+.cards {
+  grid-template-columns: repeat(4, 1fr); 
+}
 
 @media (max-width: 992px) {
   .hero {
     grid-template-columns: 220px 1fr;
   }
-    .grid {
-    grid-template-columns: 1fr;
-  }
+
   .flex{
     flex-wrap: wrap;
   }
+.cards, .grid, .categories {
+  grid-template-columns: repeat(2, 1fr); 
+}
 
 }
 @media (max-width: 768px) {
@@ -82,4 +86,17 @@
   .hero {
     gap: 10px;
   }
+  .cards, .grid, .categories {
+  grid-template-columns: repeat(1, 1fr); 
+  
+}
+button{
+  padding: 16px !important;
+  font-size: 12px !important;
+}
+h4 {
+  font-size: 24px !important;
+  margin: 8px 0;
+}
+
 }
