--- a/src/sections/styles.module.css
+++ b/src/sections/styles.module.css
@@ -58,6 +58,21 @@
   grid-template-columns: repeat(4, 1fr); 
 }
 
+/* PDP */
+.wrapperPDP {
+  padding: 40px 40px 0 40px;
+}
+
+.layoutPDP {
+  margin: 0 auto;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 48px;
+  align-items: flex-start;
+}
+
+
 @media (max-width: 992px) {
   .hero {
     grid-template-columns: 220px 1fr;
@@ -68,8 +83,12 @@
   }
 .cards, .grid, .categories {
   grid-template-columns: repeat(2, 1fr); 
+  
 }
-
+  .layout {
+    grid-template-columns: 1fr;
+    gap: 40px;
+  }
 }
 @media (max-width: 768px) {
   .hero {
