- feat(cart): activate add to cart from product cards and update header counter - feat(fav): make toggle fav btn

--- a/src/components/CardProduct/CardProduct.module.css
+++ b/src/components/CardProduct/CardProduct.module.css
@@ -63,7 +63,10 @@
   background: #db4444;
   color: #fff;
 }
-
+.icon.active {
+  background: #db4444;
+  color: #fff;
+}
 .badge {
   position: absolute;
   top: 16px;
