--- a/src/components/Cart/CartTable.module.css
+++ b/src/components/Cart/CartTable.module.css
@@ -22,7 +22,7 @@
 }
 
 .btns {
-width: 100%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   margin: 24px 0;
@@ -40,7 +40,25 @@ width: 100%;
   text-decoration: none;
 }
 
-.returnBtn:hover, .updateBtn:hover {
+.returnBtn:hover,
+.updateBtn:hover {
   background: #DB4444;
   color: #fff;
+}
+
+@media (max-width: 768px) {
+  .header {
+    display: none;
+  }
+
+  .btns {
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .returnBtn,
+  .updateBtn {
+    width: 100%;
+    text-align: center;
+  }
 }
